[tool.poetry]
name = "yggamonitors"
version = "0.1.0"
description = ""
authors = ["mudbungie <mudbungie@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
pytest = "^6.2.3"
arrow = "^1.1.0"
click = "^7.1.2"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
